# FLAM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flam.argos  flam.bzz  get_results.sh  jsdoc.conf.json  run.sh
benchmarking/: concat_results.py  plot_results.py
data/: radiation_sources0.json
doc/: .gitignore  transform.js
fig/: combine_results.py  main.py
includes/: chassis.bzz  comm.bzz  consensus.bzz  constants.bzz  crossregulation.bzz  current_key.bzz  data.bzz  eviction.bzz  failure.bzz  fitness.bzz  fv.bzz  hamming.bzz  knn.bzz  logging.bzz  metadata.bzz  move.bzz  radiation.bzz  radiation_sensor.bzz  risk.bzz  routing.bzz  stigmergy.bzz  stigmergy_manager.bzz  voting.bzz
includes/querying/: queries.bzz
lib/: buzz_closures_drone_sim.cpp  buzz_controller_drone_sim.cpp  buzz_controller_drone_sim.h  radiation_loop_functions.cpp  radiation_loop_functions.h  radiation_source.h
lib/crm/: celldatacontainers.cpp  celldatacontainers.h  crminrobotagent_optimised.cpp  crminrobotagent_optimised.h  featurevectorsinrobotagent.cpp  featurevectorsinrobotagent.h  propriofeaturevector.cpp  propriofeaturevector.h
src/: Makefile  dora-mesh.argos  dora-mesh.bzz  flam.argos  flam.bzz  hop-count.argos  hop-count.bzz  run.py  send_scripts.sh  stigmergy.argos  stigmergy.bzz
src/benchmarking/: concat_results.py  plot_results.py
src/buzz_includes/buzz_utils/: table.bzz
src/buzz_includes/dora_mesh_includes/: constants.bzz  fitness.bzz  gradient.bzz  move.bzz  risk.bzz  routing.bzz  storage.bzz
src/buzz_includes/dora_mesh_includes/querying/: queries.bzz
src/controller/: README.md
src/controller/src/: CMakeLists.txt
src/controller/src/argos/: buzz_closures_drone_sim.cpp  buzz_controller_drone_sim.cpp  buzz_controller_drone_sim.h  radiation_source.cpp
src/data/: generator.py  radiation_sources0.json  radiation_sources1.json  radiation_sources10.json  radiation_sources11.json  radiation_sources12.json  radiation_sources13.json  radiation_sources14.json  radiation_sources15.json  radiation_sources16.json  radiation_sources17.json  radiation_sources18.json  radiation_sources19.json  radiation_sources2.json  radiation_sources20.json  radiation_sources21.json  radiation_sources22.json  radiation_sources23.json  radiation_sources24.json  radiation_sources25.json  radiation_sources26.json  radiation_sources27.json  radiation_sources28.json  radiation_sources29.json  radiation_sources3.json  radiation_sources4.json  radiation_sources5.json  radiation_sources6.json  radiation_sources7.json  radiation_sources8.json  radiation_sources9.json
src/includes/: constants.bzz  current_key.bzz  data.bzz  eviction.bzz  failure.bzz  fitness.bzz  logging.bzz  metadata.bzz  move.bzz  queue.bzz  radiation.bzz  routing.bzz  stigmergy.bzz  stigmergy_manager.bzz  storage.bzz
src/includes/querying/: queries.bzz  query_msg.bzz
src/loop_functions/src/: CMakeLists.txt
src/loop_functions/src/argos/: radiation_loop_functions.cpp  radiation_loop_functions.h
src/results/dora_mesh/: 0_reliability.csv  0_speed.csv  0_storage.csv  10_reliability.csv  10_storage.csv  11_reliability.csv  11_storage.csv  12_reliability.csv  12_storage.csv  13_reliability.csv  13_storage.csv  14_reliability.csv  14_storage.csv  15_reliability.csv  15_storage.csv  16_reliability.csv  16_storage.csv  17_reliability.csv  17_storage.csv  18_reliability.csv  18_storage.csv  19_reliability.csv  19_storage.csv  1_reliability.csv  1_storage.csv  20_reliability.csv  20_storage.csv  21_reliability.csv  21_storage.csv  22_reliability.csv  22_storage.csv  23_reliability.csv  23_storage.csv  24_reliability.csv  24_storage.csv  25_reliability.csv  25_storage.csv  26_reliability.csv  26_storage.csv  27_reliability.csv  (+163 more)
src/results/hop_count/: 0_reliability.csv  0_speed.csv  0_storage.csv  10_reliability.csv  10_storage.csv  11_reliability.csv  11_storage.csv  12_reliability.csv  12_storage.csv  13_reliability.csv  13_storage.csv  14_reliability.csv  14_storage.csv  15_reliability.csv  15_storage.csv  16_reliability.csv  16_storage.csv  17_reliability.csv  17_storage.csv  18_reliability.csv  18_storage.csv  19_reliability.csv  19_storage.csv  1_reliability.csv  1_storage.csv  20_reliability.csv  20_storage.csv  21_reliability.csv  21_storage.csv  22_reliability.csv  22_storage.csv  23_reliability.csv  23_storage.csv  24_reliability.csv  24_storage.csv  25_reliability.csv  25_storage.csv  26_reliability.csv  26_storage.csv  27_reliability.csv  (+161 more)
src/results/results_grid/dora_mesh/: 0_speed.csv  10_reliability.csv  10_storage.csv  11_storage.csv  13_storage.csv  15_reliability.csv  15_storage.csv  17_storage.csv  1_reliability.csv  22_reliability.csv  23_reliability.csv  25_storage.csv  26_storage.csv  27_reliability.csv  27_storage.csv  28_reliability.csv  28_storage.csv  29_storage.csv  30_reliability.csv  30_storage.csv  31_reliability.csv  33_storage.csv  35_storage.csv  36_reliability.csv  37_reliability.csv  37_storage.csv  39_reliability.csv  3_reliability.csv  3_storage.csv  41_reliability.csv  43_storage.csv  44_reliability.csv  45_reliability.csv  45_storage.csv  47_storage.csv  4_storage.csv  50_reliability.csv  52_reliability.csv  52_storage.csv  53_storage.csv  (+57 more)
src/results/results_grid/hop_count/: 0_reliability.csv  0_storage.csv  10_reliability.csv  11_reliability.csv  11_storage.csv  12_reliability.csv  13_reliability.csv  13_storage.csv  14_reliability.csv  18_storage.csv  19_reliability.csv  1_reliability.csv  20_reliability.csv  22_reliability.csv  22_storage.csv  24_storage.csv  25_reliability.csv  25_storage.csv  26_reliability.csv  26_storage.csv  27_storage.csv  28_reliability.csv  28_storage.csv  29_reliability.csv  29_storage.csv  2_reliability.csv  2_storage.csv  30_reliability.csv  30_storage.csv  32_reliability.csv  33_reliability.csv  33_storage.csv  35_storage.csv  36_reliability.csv  36_storage.csv  38_reliability.csv  38_storage.csv  39_reliability.csv  40_storage.csv  41_reliability.csv  (+60 more)
test/: test_crossregulation.bzz  test_current_key.bzz  test_knn.bzz
(+1935 files in other folders)
